[package]
name = "bmdv-token"
version = "0.1.0"
description = "blackmint.dev merged token-mint + escrow-split program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bmdv_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18.26"
